# STplotVarLoader

./: .gitmodules  CMakeLists.txt  varloc.c  varloc.h
pluginConfReader/: CMakeLists.txt  confreader.cpp  confreader.h
pluginElfConverter/: CMakeLists.txt  elfconverter.cpp  elfconverter.h
pluginElfReader/: CMakeLists.txt  elfreader.cpp  elfreader.h  varloc.c
pluginElfReader/varloc/: .gitmodules  varloc.h
pluginJsonReader/: CMakeLists.txt  jsonreader.cpp  jsonreader.h
